<package format="2">
  <name>angus_depth_image_transport</name>
  <version>2.3.1</version>
  <description>
    Compressed_depth_image_transport provides a plugin to image_transport for transparently sending
    depth images (raw, floating-point) using PNG compression.
  </description>
  <maintainer email="dgossow@willowgarage.com">David Gossow</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/image_transport_plugins</url>
  <author>Julius Kammerl</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <image_transport plugin="${prefix}/angus_depth_plugins.xml" />
  </export>
</package>
