<?xml version="1.0"?>
<package format="3">
  <name>test_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kanzie@todo.todo">kanzie</maintainer>
  <license>TODO: License declaration</license>
  <depend>rclpy</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <depend>eufs_msgs</depend>
  <!-- additional dependencies may be listed here -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
